--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "konstantin/hexlet-slim-example",
     "autoload": {
         "psr-4": {
-            "Konstantin\\HexletSlimExample\\": "/"
+            "Konstantin\\HexletSlimExample\\": "src"
         }
     },
     "authors": [
@@ -12,10 +12,13 @@
         }
     ],
     "require": {
-        "slim/slim": "^4.13",
-        "slim/psr7": "^1.6",
-        "slim/http": "^1.3",
-        "slim/php-view": "^3.2",
-        "php-di/php-di": "^7.0"
+        "php" : ">=7.4",
+        "ext-mbstring": "*",
+        "slim/slim": "^4.9",
+        "slim/psr7": "^1.5",
+        "slim/http": "^1.2",
+        "slim/php-view": "^3.1",
+        "php-di/php-di": "^6.3",
+        "slim/flash": "^0.4.0"
     }
 }
