--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "konstantin/hexlet-slim-example",
     "autoload": {
         "psr-4": {
-            "Konstantin\\HexletSlimExample\\": "src"
+            "App\\": "src"
         }
     },
     "authors": [
